--- a/img/index.html
+++ b/img/index.html
@@ -6,6 +6,6 @@
     <title>AGRINHO 2025</title>
 </head>
 <body>
-    <h1>Impacto do desmatamento</h1>
+    <h1> impacto do desmatamento </h1>
 </body>
 </html>
