--- a/img/index.html
+++ b/img/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGRINHO 2025</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> impacto do desmatamento </h1>
+   <header>  
+    <h1>IMPACTO DO DESMATAMENTO</h1>
+    <img src="imagem.jpg" alt="foto das quiemadas">
+    <p>TEXTO SOBRE A PEQUISA</p>
+   </header>
 </body>
 </html>
