--- a/img/index.html
+++ b/img/index.html
@@ -11,6 +11,37 @@
     <h1>IMPACTO DO DESMATAMENTO</h1>
     <img src="imagem.jpg" alt="foto das quiemadas">
     <p>TEXTO SOBRE A PEQUISA</p>
-   </header>
+    <nav>
+    <ul>/*tag para linhas de coluna*/
+        <li> <a href="#problemas"></a>PROBLEMAS</li>
+        <li> <a href="#consequencias"></a>CONSEQUENCIAS</li>
+        <li> <a href="#conclusao"></a>CONCLUSAO</li>
+         </ul>
+     </nav>
+     </header>
+   <main>
+    <section id="problemas" class="conteudo">
+     <h2>OS PROBLEMAS</h2>
+     <article>
+        <h3>subtitulo</h3>
+        <p>texto relacionado aos problemas</p>
+     </article>
+    </section>
+    <section id="conequencias" class="conteudo">
+     <h2>CONEQUENCIAS</h2>
+     <ul>
+        <li>AQUECIMENTO GLOBAL</li>
+        <li>MORTE DOS ANIMAIS</li>
+     </ul>
+    </section>
+    <section id="concluao" class="conteudo">
+       <h2>CONCLUSAO</h2>
+       <P>Aqui eu escrevo tudo que eu conclui a minha pesquisa</P>
+    </section>
+   </main>
 </body>
+<footer>
+    <a href="@instagram.com.br" class="cta-footer">xsvieira</a>
+    <p>2025 | &Copyright</p>
+</footer>
 </html>
